--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"ac-qrcode": "^1.0.1",
 		"babel-plugin-syntax-decorators": "^6.13.0",
 		"babel-plugin-transform-decorators-legacy": "^1.3.4",
 		"babel-preset-react-native": "1.9.1",
@@ -16,6 +17,7 @@
 		"mobx": "^3.2.2",
 		"mobx-react": "^4.2.2",
 		"moment": "^2.22.2",
+		"prop-type": "0.0.1",
 		"prop-types": "^15.6.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.2",
@@ -35,6 +37,8 @@
 		"react-native-root-toast": "^2.2.1",
 		"react-native-scrollable-tab-view": "^0.7.1",
 		"react-native-simple-toast": "0.0.8",
+		"react-native-smart-barcode": "^1.0.6",
+		"react-native-smart-timer-enhance": "^1.0.3",
 		"react-native-splash-screen": "^2.1.0",
 		"react-native-swipeout": "^2.3.6",
 		"react-native-swiper": "^1.5.4",
