--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-native-barcode-scanner-universal": "^1.0.5",
 		"react-native-barcodescanner": "^3.1.1",
 		"react-native-blur": "^2.0.0",
+		"react-native-camera": "^1.3.0",
 		"react-native-communications": "^2.2.1",
 		"react-native-datepicker": "^1.7.2",
 		"react-native-deprecated-custom-components": "^0.1.2",
